{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 57,
  "lineage": "f53647ba-4c24-6c35-086d-95082b4c09d7",
  "resources": [
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tf-nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d9ec7bf9-5100-46c2-8b9c-65cbae08beca/resourceGroups/dev-rg1/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "location": "southeastasia",
            "name": "dev-nsg",
            "resource_group_name": "dev-rg1",
            "security_rule": [],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vm.azurerm_resource_group.tf-rg1"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tf-sgrule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/d9ec7bf9-5100-46c2-8b9c-65cbae08beca/resourceGroups/dev-rg1/providers/Microsoft.Network/networkSecurityGroups/dev-nsg/securityRules/dev-sg",
            "name": "dev-sg",
            "network_security_group_name": "dev-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "dev-rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vm.azurerm_network_security_group.tf-nsg1",
            "module.vm.azurerm_resource_group.tf-rg1"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d9ec7bf9-5100-46c2-8b9c-65cbae08beca/resourceGroups/dev-rg1/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet",
            "name": "dev-subnet",
            "resource_group_name": "dev-rg1",
            "virtual_network_name": "dev-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vm.azurerm_resource_group.tf-rg1",
            "module.vm.azurerm_virtual_network.tf-vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tf-sgassoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d9ec7bf9-5100-46c2-8b9c-65cbae08beca/resourceGroups/dev-rg1/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet",
            "network_security_group_id": "/subscriptions/d9ec7bf9-5100-46c2-8b9c-65cbae08beca/resourceGroups/dev-rg1/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "subnet_id": "/subscriptions/d9ec7bf9-5100-46c2-8b9c-65cbae08beca/resourceGroups/dev-rg1/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vm.azurerm_network_security_group.tf-nsg1",
            "module.vm.azurerm_resource_group.tf-rg1",
            "module.vm.azurerm_subnet.tf-subnet1",
            "module.vm.azurerm_virtual_network.tf-vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tf-vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "50a80e74-cb17-4d77-b857-b41f8d9a0610",
            "id": "/subscriptions/d9ec7bf9-5100-46c2-8b9c-65cbae08beca/resourceGroups/dev-rg1/providers/Microsoft.Network/virtualNetworks/dev-vnet",
            "location": "southeastasia",
            "name": "dev-vnet",
            "resource_group_name": "dev-rg1",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/d9ec7bf9-5100-46c2-8b9c-65cbae08beca/resourceGroups/dev-rg1/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet",
                "name": "dev-subnet"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vm.azurerm_resource_group.tf-rg1"
          ]
        }
      ]
    }
  ]
}